@@ -34,6 +34,7 @@ relaxdtmf=on     ;in addition to softdtmf, you can use relaxed dtmf detection
 faxdetect=off    ;enable faxdetection and redirection to EXTEN 'fax' for incoming and/or
                  ;outgoing calls. (default='off', possible values: 'incoming','outgoing','both')
 accountcode=     ;PBX accountcode to use in CDRs
+;amaflags=default;AMA flags for CDR ('default', 'omit', 'billing', or 'documentation')
 context=capi-in  ;context for incoming calls
 ;holdtype=hold   ;when the PBX puts the call on hold, ISDN HOLD will be used. If
                  ;set to 'local' (default value), no hold is done and the PBX may
